--- a/profiles.yml
+++ b/profiles.yml
@@ -1,12 +1,15 @@
 basic:
-  - basic
+  fragments:
+    - basic
 
 # The 'ruby' fragment depends on the 'basic' fragment
 ruby:
-  - basic
-  - ruby
+  fragments:
+    - basic
+    - ruby
 
 # Demonstrates the 'credit' ERB fragment
 credit:
-  - basic
-  - credit
+  fragments:
+    - basic
+    - credit
